@@ -103,13 +103,11 @@ Global
 	EndGlobalSection
 	GlobalSection(SolutionItems) = postSolution
 		TortoiseSVNSetup\autolist.txt = TortoiseSVNSetup\autolist.txt
-		build.txt = build.txt
 		Changelog.txt = Changelog.txt
 		Debug-Hints.txt = Debug-Hints.txt
 		TortoiseShell\Documentation.h = TortoiseShell\Documentation.h
 		..\doc\issuetrackers.txt = ..\doc\issuetrackers.txt
 		TortoiseSVNSetup\Setup.wxs = TortoiseSVNSetup\Setup.wxs
-		translations.txt = translations.txt
 		version.in = version.in
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
