@@ -161,6 +161,8 @@
 #define IDS_COLDESCOWNER                248
 #define IDS_TT_NEEDSLOCK                249
 #define IDS_DROPCOPYRENAMEMENU          250
+#define IDS_COLTITLEAUTHOR              251
+#define IDS_COLDESCAUTHOR               252
 #define IDC_REVISION                    1001
 #define IDC_LOCKED                      1002
 #define IDC_REPOURL                     1003
